# juggling-with-drones

./: .gitignore  Makefile  README.md
crazyflie_trajectory_manager/: CMakeLists.txt  package.xml
crazyflie_trajectory_manager/launch/: one_drone.launch
crazyflie_trajectory_manager/msg/: ConfigTrajectoryBoolPayload.msg  ConfigTrajectoryFloatPayload.msg  ConfigTrajectoryStringPayload.msg  ConfigTrajectoryVectorPayload.msg  LoadTrajectoryPayload.msg  TranslateTrajectoryPayload.msg  VisualizeTrajectoryPayload.msg
crazyflie_trajectory_manager/src/: BSplineTimedTrajectory.py  BSplineTrajectory.py  BallLikeTrajectory.py  GravitationTrajectory.py  HoverTrajectory.py  Juggle3DTrajectory.py  LandTrajectory.py  Trajectory.py  TrajectoryManager.py  TrajectoryUtils.py  examples.py
crazyflie_trajectory_manager/srv/: ConfigTrajectoryBool.srv  ConfigTrajectoryFloat.srv  ConfigTrajectoryString.srv  ConfigTrajectoryVector.srv  LoadTrajectory.srv  TranslateTrajectory.srv  VisualizeTrajectory.srv
juggling_controller/: CMakeLists.txt  package.xml
juggling_controller/launch/: razer_controller.launch
juggling_controller/msg/: GloveInput.msg
juggling_controller/src/: ControlMode.py  ControlModeBSpline.py  ControlModeBTimed.py  ControlModeBall.py  ControlModeCircle.py  ControlModeHover.py  ControlModeJuggle3D.py  ControlModeLand.py  Controller.py  HydraMapper.py  PubSubManager.py  circle_fit.py
juggling_demo/: CMakeLists.txt  package.xml
juggling_demo/data/: anchor_pos.yaml  razer_one_drone.rviz  razer_swarmy.rviz  rvizconfig_with_goal.rviz
juggling_demo/examples/: simple_hover.txt
juggling_demo/launch/: phone_swarmy.launch  razer_one_drone.launch  razer_swarmy.launch
juggling_phone_glove/: CMakeLists.txt  LICENSE  Procfile  README.md  package.json  package.xml  requirements.txt  run.js
juggling_phone_glove/launch/: phone.launch
juggling_phone_glove/public/: phone.html
juggling_phone_glove/public/css/: abortbutton.css  (+2 more)
juggling_phone_glove/python/: ros_bridge.py
juggling_phone_glove/windows/: install.bat  run.bat
juggling_swarm_manager/: CMakeLists.txt  package.xml
juggling_swarm_manager/src/: PubSubManager.py  SwarmManager.py
juggling_swarm_manager/srv/: Proxy_ConfigTrajectoryBool.srv  Proxy_ConfigTrajectoryFloat.srv  Proxy_ConfigTrajectoryString.srv  Proxy_ConfigTrajectoryVector.srv  Proxy_Empty.srv  Proxy_LoadTrajectory.srv  Proxy_TranslateTrajectory.srv  Proxy_VisualizeTrajectory.srv
(+1 files in other folders)
